Updated the 20th Oct meeting

--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -1,14 +1,14 @@
 ---
 layout: datahide
-title:  "Artificial Intelligence"
-tagline: Wolfram Research and lightning talks from Mike and Neil
+title:  "Research Data Management and Artificial Intelligence"
+tagline: Reproducibility, AI, Machine learning for Chemistry
 venue: "[The Hide](https://www.facebook.com/TheHideS3)"
 date: 2015-10-20 17:00
 talks:
 - start: "17:00"
   end: "17:30"
-  title: "TBA"
-  speaker: "TBA"
+  title: "Research Data Management for Computational Science"
+  speaker: "Christian Jacobs"
   type: invited
 - start: "18:00"
   end: "18:05"
@@ -17,10 +17,14 @@ talks:
   type: lighting
 - start: "18:15"
   end: "18:20"
-  title: "TBA"
+  title: "Machine Learning for Chemical Simulations"
+  speaker: "Chris Handley"
+  title: lightning
+- start: "18:30"
+  end: "18:35"
+  title: "Reveal.js - The future of slide presentations"
   speaker: "[Mike Croucher](http://walkingrandomly.com)"
   type: lighting
-  
 ---
 
 
