--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -19,7 +19,7 @@ talks:
   end: "18:20"
   title: "Machine Learning for Chemical Simulations"
   speaker: "Chris Handley"
-  title: lightning
+  type: lightning
 - start: "18:30"
   end: "18:35"
   title: "Reveal.js - The future of slide presentations"
