--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -24,7 +24,7 @@ talks:
   end: "18:35"
   title: "Reveal.js - The future of slide presentations"
   speaker: "[Mike Croucher](http://walkingrandomly.com)"
-  type: lighting
+  type: lightning
 ---
 
 
