--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -4,6 +4,7 @@ title:  "Research Data Management and Artificial Intelligence"
 tagline: Reproducibility, AI, Machine learning for Chemistry
 venue: "[The Hide](https://www.facebook.com/TheHideS3)"
 date: 2015-10-20 17:00
+tickets: http://www.eventbrite.com/e/the-data-hide-tickets-19038564860
 talks:
 - start: "17:00"
   end: "17:30"
@@ -26,7 +27,3 @@ talks:
   speaker: "[Mike Croucher](http://walkingrandomly.com)"
   type: lightning
 ---
-
-
-
-
