--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -1,7 +1,7 @@
 ---
 layout: datahide
 title:  "Research Data Management and Artificial Intelligence"
-tagline: Reproducibility, AI, Machine learning for Chemistry
+tagline: Reproducibility, AI and Machine learning
 venue: "[The Hide](https://www.facebook.com/TheHideS3)"
 date: 2015-10-20 17:00
 tickets: http://www.eventbrite.com/e/the-data-hide-tickets-19038564860
