Finally fixed tickets field

--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -3,8 +3,8 @@ layout: datahide
 title:  "Research Data Management and Artificial Intelligence"
 tagline: Reproducibility, AI and Machine learning
 venue: "[The Hide](https://www.facebook.com/TheHideS3)"
+tickets: "[http://www.eventbrite.com/e/the-data-hide-tickets-19038564860](http://www.eventbrite.com/e/the-data-hide-tickets-19038564860)"
 date: 2015-10-20 17:00
-tickets: [http://www.eventbrite.com/e/the-data-hide-tickets-19038564860](http://www.eventbrite.com/e/the-data-hide-tickets-19038564860)
 talks:
 - start: "17:00"
   end: "17:30"
