--- a/_posts/2015-11-27-TBA.md
+++ b/_posts/2015-11-27-TBA.md
@@ -4,6 +4,7 @@ title:  "To be Announced"
 tagline: Coming soon
 venue: "[The Hide](https://www.facebook.com/TheHideS3)"
 date: 2015-11-27 17:00
+tickets: Not yet available
 talks:
 - start: "17:00"
   end: "17:30"
