--- a/_posts/2015-11-17-TBA.md
+++ b/_posts/2015-11-17-TBA.md
@@ -4,7 +4,7 @@ title:  "To be Announced"
 tagline: Coming soon
 venue: "[The Hide](https://www.facebook.com/TheHideS3)"
 date: 2015-11-17 17:00
-tickets: Not yet available
+tickets: 
 talks:
 - start: "17:00"
   end: "17:30"
