--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -8,7 +8,7 @@ date: 2015-10-20 17:00
 talks:
 - start: "17:00"
   end: "17:30"
-  title: "Research Data Management for Computational Science"
+  title: "Research Data Management for Computational Science - [slides doesn't work]({{ site.url }}/slides/october2015/jacobs.pdf)"
   speaker: "Christian Jacobs"
   type: invited
 - start: "18:00"
@@ -27,3 +27,5 @@ talks:
   speaker: "[Mike Croucher](http://walkingrandomly.com)"
   type: lightning
 ---
+
+Research Data Management for Computational Science - [slides do work]({{ site.url }}/slides/october2015/jacobs.pdf)
