--- a/_posts/2015-10-20-RDM-ai.md
+++ b/_posts/2015-10-20-RDM-ai.md
@@ -18,12 +18,12 @@ talks:
   type: lighting
 - start: "18:15"
   end: "18:20"
-  title: "Machine Learning for Chemical Simulations"
+  title: "Machine Learning for Chemical Simulations - [Slides](http://opendsi.cc/datahide/slides/october2015/chris_handley.pdf)"
   speaker: "Chris Handley"
   type: lightning
 - start: "18:30"
   end: "18:35"
-  title: "Reveal.js - The future of slide presentations"
+  title: "Reveal.js - The future of slide presentations - [Slides](http://mikecroucher.github.io/ODSI_reveal_lightning/#/)"
   speaker: "[Mike Croucher](http://walkingrandomly.com)"
   type: lightning
 ---
